# wiikey

./: .gitignore  CMakeLists.txt  README.md
data/: wiikey.desktop
data/theme/: index.theme
include/: app.h  flick.h  keys.h  modifier.h  ui.h  uinput_dev.h  utf8.h
resources/: build.sh  run.sh  setup.sh
src/: flick.cpp  main.cpp  modifier.cpp  ui.cpp  uinput_dev.cpp  utf8.cpp
